[package]
name = "gensokyo-radio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
stream-download = { git = "https://github.com/aschey/stream-download-rs" }
rodio = "0.17.1"
